--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,8 +21,8 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li>
-                                <form class="form-inline my-2 my-lg-0">
-                                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                                <form method="post" action="{{ path('posts_search') }}" class="form-inline my-2 my-lg-0">
+                                    <input name="search_data" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                                 </form>
                             </li>
@@ -32,7 +32,8 @@
                                 {{ app.user.username }}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Posts</a>
+                                <a class="dropdown-item" href="{{ path('posts') }}">Posts</a>
+                                <a class="dropdown-item" href="{{ path('post_create') }}">Create post</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a>
                             </div>
