--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="{{ path('posts') }}">Posts</a>
                                 <a class="dropdown-item" href="{{ path('post_create') }}">Create post</a>
+                                <a class="dropdown-item" href="{{ path('post_import') }}">Import posts</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a>
                             </div>
