--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -4,23 +4,27 @@
     <div class="container">
         <div class="col-md-12">
             {% for post in posts %}
-            <h1>
-                {% if post.user is not null and post.user.id == app.user.id %}
-                    <a href="{{ path('post_edit', {'id': post.id}) }}">{{ post.title }}</a>
-                {% else %}
-                    {{ post.title }}
-                {% endif %}
-            </h1>
+                <h1>
+                    {% if post.user is not null and post.user.id == app.user.id %}
+                        <a href="{{ path('post_edit', {'id': post.id}) }}">{{ post.title }}</a>
+                    {% else %}
+                        {{ post.title }}
+                    {% endif %}
+                </h1>
                 <p>{{ post.body }}</p>
-            {% if post.category is not null %}
-                <div>
-                    <div class="pull-right"><span class="label label-default"><b>Category:&nbsp;</b>{{ post.category.name }}</span>
-                        {% if post.user is not null and post.user.id == app.user.id %}
-                            <a class="float-right" href="{{ path('post_delete', {'id': post.id}) }}">Remove</a>
+
+                <div class="pull-right">
+                    <span class="label label-default"><b>Category:&nbsp;</b>
+                        {% if post.category is not null %}
+                            {{ post.category.name }}
+                        {% else %}
+                            No
                         {% endif %}
-                    </div>
+                    </span>
+                    {% if post.user is not null and post.user.id == app.user.id %}
+                        <a class="float-right" href="{{ path('post_delete', {'id': post.id}) }}">Remove</a>
+                    {% endif %}
                 </div>
-            {% endif %}
                 <hr>
             {% endfor %}
         </div>
